# SPS30-Endpoint

./: .gitignore  CMakeLists.txt  Makefile  README.md  create_deb.sh  create_debs.sh  fetch_deps.sh  piaq.config
config/: piaq.conf
deb/: control-arm-linux-gnueabi  control-x86_64-linux-gnu  piaq-v0.1.0_x86_64-linux-gnu.deb  piaq-v0.9.1_arm-linux-gnueabi.deb  piaq-v0.9.1_x86_64-linux-gnu.deb
deb-control/: control-arm-linux-gnueabi  control-x86_64-linux-gnu  postinst  prerm
man/: piaq.1
releases/: piaq-v0.1.0_arm-linux-gnueabi.deb  piaq-v0.9.0_arm-linux-gnueabi.deb  piaq-v0.9.0_x86_64-linux-gnu.deb  piaq-v0.9.1_arm-linux-gnueabi.deb  piaq-v0.9.1_x86_64-linux-gnu.deb
src/: main.cpp
systemd/: piaq.service
